[W3C] Refactor executors, add CsvTsvResultParser tests, and fix SonarLint warnings
- Add comprehensive unit tests in CsvTsvResultParserTest
- Use dataset-level model isomorphism in SparqlUpdateEvaluationTestExecutor
- Modularize manifest loading and test type mapping in W3cTestLoader
- Address SonarLint issues (cognitive complexity, regex optimization, curly braces)
- Remove accidental generated token artifact